--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
       <artifactId>spring-orm</artifactId>
       <version>5.3.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.6</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
